tests/test123.rael.exp
Error [tests/test123.rael:3:10]: factorial expects positive numbers
|         ^blame "factorial expects positive numbers"
|          ^
