tests/test123.rael
:Factorial routine(:0) {
    if :0 < 0 {
        ^blame "factorial expects positive numbers"
    } else if :0 = 0 {
        ^1
    } else {
        ^:0 * :Factorial(:0 - 1)
    }
}

log :Factorial(-1) - 2
